assets/css/style.css
body {
	background-color:gold;
}

#timer {
	font-family: 'Source Code Pro', sans-serif;
}

main {
	width: 100%;
	height: 500px;
}

header::after {
	content: " ";
	display: block;
	width: 100%;
	background: #e7e9eb;
	height: 2px;	
	margin-bottom: 40px;   
}

.container {
	max-width: 720px;
}

.first {
	height: 200px;
	border: 5px solid rgb(86, 10, 38);
	text-align: center;
	background-color: aqua;
}

.question {
	font-family: 'Open Sans', sans-serif;
	font-weight: 700;
	font-size: 50px;
	padding: 20px;
	width: 100%;
	height: 200px;
}

.second::before {
	content: " ";
	display: block;
	width: 100%;
	background: #e7e9eb;
	height: 2px;	
	margin-bottom: 40px;
	margin-top: 40px;
}

.button-holder {
	padding:5px;
}

.submitBtn, .answerBtn {
	padding-top: 25px;
	font-family: 'Baloo Tammudu 2', cursive;
	font-weight: 900;
	background-color: aqua;
	border: 5px solid rgb(86, 10, 38);
	font-size: 28px;
}

#unanswered {
	display: inline;
}

.answerBtn {
	padding-left: 10px;
	margin-top: 5px;
	height: 85px;
}

.incorrect {
	background-color: rgb(255, 52, 52);
}

.answerBtn.incorrect {
	transform: scale(.95);
}

.correct {
	background-color: rgb(62, 255, 62);
}

.off {
	background-color:rgb(90, 91, 90);
}

.on {
	box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
	transform: scale(1);
	animation: pulse 2s infinite;
}

.active:hover {
	background-color: rgb(62, 255, 62);
	box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
	transform: scale(1.05);
}

@keyframes pulse {
	0% {
		transform: scale(0.95);
		box-shadow: 0 0 0 0 rgb(0, 0, 0, .7);
	}

	70% {
		transform: scale(1);
		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);	
	}

	100% {
		transform: scale(0.95);	
	}
}

.modal {
	overflow: auto;
}

.modal-content {
	border: 10px solid rgb(86, 10, 38);
}

.modal-header {
	border-bottom: 10px solid rgb(86, 10, 38);
	font-family: 'Open Sans', sans-serif;
	background-color: rgb(62, 255, 62);
	font-size: 30px;
	font-weight: 700;
}

#scoreModal .modal-body {
	background-color: gold;
	padding: 0;
}

.modal-footer {
	border-top: 10px solid rgb(86, 10, 38);
	background-color: rgb(62, 255, 62);
}

table {
	font-family: 'Baloo Tammudu 2', cursive;
	border-collapse: collapse;
	width: 100%;
}

td, th {
	border: 1px solid rgb(86, 10, 38);
	text-align: center;
	padding: 8px;
	padding-top:20px;
}

th {
	font-weight: 900;
	background-color: aqua;
	font-size:20px;
}


tr:nth-child(odd) {
	background-color: #dddddd;
}

@media screen and (max-width: 768px) {
	
	.answerBtn, .submitBtn {
		padding-top: 22px;
	}

	.answerBtn {
		font-size: 24px;
	}

	.container {
		width: 95%
	}

	.question {
		font-size: 40px;
	}
	.second::before {
		
		margin-bottom: 30px;
		margin-top: 30px;
	}
	header::after {
		content: " ";
		margin-bottom: 30px;   
	}
}

@media screen and (max-width: 576px) {

	.answerBtn, .submitBtn {
		padding-top: 22px;
	}
	.submitBtn {
		font-size: 21px;
	}

	.answerBtn {
		font-size: 21px;
	}

	#unanswered {
			font-size: 16px;
	}

	.question {
		font-size: 35px;
	}
	.second::before {
		
		margin-bottom: 20px;
		margin-top: 20px;
	}
	header::after {
		content: " ";
		margin-bottom: 20px;   
	}

	.first {
		height: 185px;
	}
	
}

@media screen and (max-width: 420px) {

	.answerBtn, .submitBtn {
		padding-top: 18px;
	}


	.submitBtn {
		font-size: 15px;
	}
	.answerBtn {
		font-size: 18px;
	}

	#unanswered {
		font-size: 14px;
	}

	.question {
		font-size: 27px;
	}
	.second::before {
		
		margin-bottom: 20px;
		margin-top: 20px;
	}
	header::after {
		content: " ";
		margin-bottom: 20px;   
	}

	.first {
		height: 170px;
	}
	
}


	

